package com.company;

public interface IWaluta {

    String wyswietlKursy();
    String wyswietlKody();

}
