package com.company;


public class Main {

    public static void main(String[] args) {

        WyswietlWTerminalu wyswietl = new WyswietlWTerminalu();
        wyswietl.piszWTerminalu();

    }
}
